--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hi
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+
+
+</body>
+</html>
